k8s/microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: microservice
  template:
    metadata:
      labels:
        component: microservice
    spec:
      containers:
        - name: microservice
          image: diogenesfiorezi/microservice:latest
          ports:
            - containerPort: 4000
