k8s/microservice-configuration.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: microservice
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: microservice
  template:
    metadata:
      labels:
        component: microservice
    spec:
      containers:
        - name: microservice
          image: diogenesfiorezi/microservice:latest
          ports:
            - containerPort: 4000
